$Id$

urtjag-UNRELEASED

    * FreeBSD libgpio support code. FreeBSD 11 or later.
      jtag> cable bsdgpio tdi=18 tdo=17 tms=19 tck=20

urtjag-2017.10

    * First release since a long time
    * Switched from sequential version number to date related version number

urjtag-0.10

    * Major internal improvements
      - Flash write/program API function now operates on a buffer instead
        of single bytes/words. Required for the multi-byte write mode.
        (Arnim Laeuger)
      - Limit maximum number of bytes queued for usbconn based cables.
        Reduces the requested amount of memory for SVF runtest (Kolja Waschk)
      - Command and methods to access JTAG signals directly, including
        TRST and SRST (Sebastian Hesselbarth, Kolja Waschk, Arnim Laeuger)
    * Improvements to the build system
      - Several updates for Windows build compatability (Mike Frysinger)
      - CPP include strategy sanitized (Mike Frysinger)
      - Resolved formatting/printing mismatches (Mike Frysinger)
      - bsdl2jtag program replaced by wrapper script (Arnim Laeuger)
      - Man page updates (Uwe Hermann)
    * Updates to the jtag command shell
      - New usleep command (Stanislav Sinyagin)
      - Added instruction parameter to the print command (Hartley Sweeten)
      - Added ref_freq parameter to the svf command (Arnim Laeuger)
      - New pod command (Kolja Waschk)
      - Added noverify parameter to the flashmem command (Jeff Wittrock)
    * Updates to the SVF player
      - Optional reference frequency (Arnim Laeuger)
      - Fix compare TDO flaw (Kolja Waschk)
      - Fix progress indicator visibility (William)
      - Add pass/fail report for progress reporting (Arnim Laeuger)
    * New and updated bus drivers
      - Support BCM6348/EJTAG 3.1 (by Andy Potter/livebox)
      - Fixed address mode behvavior of prototype driver (Arnim Laeuger)
      - Support foe EJTAG in DMA mode (Julien Aube)
      - Added Goepel Boundary Scan Coach (Markus Schneider)