@@ -78,26 +78,9 @@ in the works.
 
 <h2>Status</h2>
 <p>
-On 2018-03-21 was version 2017.10 released.
-Precessor was version 0.10.
-Inbetween were several releases direct from Version Control System.
+On 2018-06-21 was version 2018.06 released.
+Precessor was version 2017.10.
 </p>
-<p>
-Release 0.10 has consolidated several parts of UrJTAG. Improvements in the build system
-and library detection now allow for better compatability with Windows platforms. This is
-complemented by a self-installing executable for Windows. With the introduction of the "pod"
-command, all JTAG signals including TRST and SRST are now freely controllable. Flash programming
-performance has been improved by adding multi-byte write mode capability to the flash
-drivers. Chips supporting this burst mode are automatically detected and benefit from a
-programming speed-up of several factors. Many annoyances and bugs have been fixed.
-</p>
-<p>
-<b>
-Version 0.10 has been released on April, 17th 2009 and is now available in the 
-<a href="http://sourceforge.net/project/showfiles.php?group_id=193266">Downloads</a> section!
-</b>
-</p>
-
 </div>
 
 <!-- ----------------------------------------------------------------- --> 
